# jsonrpc-types

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: error.rs  id.rs  lib.rs  params.rs  request.rs  response.rs  version.rs
src/request/: compact.rs  compat.rs  mod.rs  params.rs
src/response/: compact.rs  compat.rs  mod.rs
src/v1/: mod.rs  request.rs  response.rs
src/v2/: mod.rs  request.rs  response.rs
