[package]
name = "jsonrpc-types"
version = "0.1.0"
authors = ["koushiro <koushiro.cqx@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/jsonrpc-types"
repository = "https://github.com/koushiro/jsonrpc-types-rs"
description = "A set of types for JSON-RPC 2.0"
keywords = ["jsonrpc"]
categories = ["web-programming"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
